# endstone-music-player

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
src/endstone_music_player/: __init__.py  music_command.py  music_gui.py  music_player.py  music_player_global.py  music_plugin.py  music_storage.py
src/endstone_music_player/songs/: song.py  song_nbs.py
