[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-music-player"
version = "0.0.1"
dependencies = [
    "pynbs>=1.1.0",
]
authors = [
    { name = "MineBuilder" },
]
description = "'Sounds' Good with Endstone!"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "nbs", "player"]

[project.urls]
Homepage = "https://github.com/MineBuilders/endstonemc-music-player"

[project.entry-points."endstone"]
music-player = "endstone_music_player:MusicPlugin"
